# pycookiex

./: .kacl.yml  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  NOTICE  README.md  Taskfile.yml  cookiecutter.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-env/: action.yml
.github/workflows/: checks.yml  generate_test.yml  release.yml  test.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/CHANGELOG/: index.html
0.1.0/LICENSE/: index.html
0.1.0/examples/docstring_examples/: index.html
0.1.0/search/: search_index.json
docs/: mkdocs.yml
docs/docs/examples/: docstring_example.md
examples/: docsting_example.py
hooks/: post_gen_project.py  pre_prompt.py
license_templates/: LICENSE-Apache-2.0.md  LICENSE-GPL-3.0.md  LICENSE-MIT.md
tests/: __init__.py  test_bake_project.py
{{ cookiecutter.project_slug }}/: .gitignore  CHANGELOG.md  LICENSE.md  Taskfile.yml  pyproject.toml  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE.md {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE.md {%- endif %}
{{ cookiecutter.project_slug }}/.github/actions/setup-env/: action.yml
{{ cookiecutter.project_slug }}/.github/workflows/: checks.yml  test.yml
{{ cookiecutter.project_slug }}/docs/: hooks.py  mkdocs.yml
{{ cookiecutter.project_slug }}/tests/: __init__.py  test_version.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __about__.py  __init__.py
