[tool.poetry]
name = "pycookiex"
version = "0.1.0"
description = "Yet another Python cookiecutter"
authors = ["budivoy"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-cookies = "^0.7.0"
ruff = "^0.6.1"

[tool.ruff]
target-version = "py312"
indent-width = 2
line-length = 119

[tool.ruff.lint]
# By default, enable all the lint rules.
# Add to the ignore list below if you don't want some rules.
# If you need some ignores for certain modules, see tool.ruff.lint.per-file-ignores below.
# For individual ignore cases, prefer inline `# noqa`s within the code.
select = ["ALL"]
ignore = ["ISC001", "COM812"]
pydocstyle.convention = "google"
exclude = ["*cookiecutter*"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # "Use of `assert` detected"
    "ARG",  # "Unused function argument". Fixtures are often unused.
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
